--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,10 +12,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "chart.js": "^4.5.0",
+    "csv-parser": "^3.2.0",
     "daisyui": "^5.0.46",
+    "neat-csv": "^7.0.0",
     "next": "15.4.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.0",
+    "strip-bom-stream": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
