--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,11 +15,15 @@
     "chart.js": "^4.5.0",
     "csv-parser": "^3.2.0",
     "daisyui": "^5.0.46",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "neat-csv": "^7.0.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^15.6.0",
     "recharts": "^3.1.0",
     "strip-bom-stream": "^5.0.0"
   },
